feat(product) : implement product image crop and show