@@ -6,19 +6,20 @@ import com.tomobs.ecommerce.dto.ProductVariantAddDTO;
 import com.tomobs.ecommerce.model.ProductVariant;
 import com.tomobs.ecommerce.service.*;
 import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
-
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Controller
 @RequestMapping("/admin/products")
+@RequiredArgsConstructor
 public class AdminProductController {
 
     private final ProductService productService;
@@ -26,19 +27,6 @@ public class AdminProductController {
     private final CategoryService categoryService;
     private final BrandService brandService;
     private final  VariantImageService variantImageService;
-
-    public AdminProductController(
-            ProductService productService,
-            ProductVariantService productVariantService,
-            VariantImageService variantImageService,
-            CategoryService categoryService,
-            BrandService brandService) {
-        this.productService = productService;
-        this.productVariantService = productVariantService;
-        this.variantImageService = variantImageService;
-        this.categoryService = categoryService;
-        this.brandService = brandService;
-    }
 
     // PAGINATED PRODUCT LIST
     @GetMapping
@@ -62,8 +50,6 @@ public class AdminProductController {
     public String showAddProductPage(Model model) {
 
         ProductAddDTO productAddDTO = new ProductAddDTO();
-
-//        productAddDTO.getVariants().add(new ProductVariantAddDTO());
 
         model.addAttribute("product", productAddDTO);
         model.addAttribute("categories", categoryService.getAllCategories());
@@ -93,19 +79,14 @@ public class AdminProductController {
             v.setProductId(savedProductId);
             ProductVariant savedVariant = productVariantService.addProductVariant(v);
 
-
             List<MultipartFile> validImages = v.getImages().stream()
                     .filter(file -> file != null && !file.isEmpty())
-                    .collect(Collectors.toList());
-
-
+                    .toList();
 
             for(MultipartFile file : validImages) {
                 variantImageService.saveImage(file, savedVariant);
             }
         }
-
-
         return "redirect:/admin/products";
     }
 }
